--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'commons-net:commons-net:3.4'
     compile 'org.subethamail:subethasmtp:3.1.7'
+    compile 'mysql:mysql-connector-java:5.1.38'
+    compile 'org.hibernate:hibernate-core:5.1.0.Final'
 }
 
 test {
