--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile 'org.subethamail:subethasmtp:3.1.7'
     compile 'mysql:mysql-connector-java:5.1.38'
     compile 'org.hibernate:hibernate-core:5.1.0.Final'
+    compile 'ru.lanwen.verbalregex:java-verbal-expressions:1.4'
 }
 
 test {
